--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Dant's Barbearia</h2>
 	 
-			<p>Localizada no coração da cidade a <strong>Dant's Barbearia</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+			<p>Localizada no centro da cidade a <strong>Dant's Barbearia</strong> traz para o você o que há de melhor para o seu cabelo e barba. Fundada em 2023, a Dant's Barbearia já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
 			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
 
