--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Dant's Barbearia</title>
+		<title>Padaria Dant's</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
 	<body>
 		<header>
-			<h1 class="titulo-principal">Dant's Barbearia</h1>
+			<h1 class="titulo-principal">Padaria Dant's</h1>
 		</header>
 		<img id="banner" src="banner.JPG">
 		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Dant's Barbearia</h2>
+			<h2 class="titulo-centralizado">Sobre a Padaria Dant's</h2>
 	 
-			<p>Localizada no centro da cidade a <strong>Dant's Barbearia</strong> traz para o você o que há de melhor para o seu cabelo e barba. Fundada em 2023, a Dant's Barbearia já é destaque na cidade e conquista novos clientes a cada dia.</p>
+			<p>Localizada no centro da cidade a <strong>Padaria Dant's</strong> traz para o você o que há de melhor para o seu dia. Fundada em 2023, a Padaria Dant's já é destaque na cidade e conquista novos clientes a cada dia.</p
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar um sabor unico aos clientes"</strong>.</em></p>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+			<p>Oferecemos profissionais experientes. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</div>
 
 		<div class="beneficios">
@@ -28,7 +28,7 @@
 				<li class="itens">Atendimento aos Clientes</li>
 				<li class="itens">Espaço diferenciado</li>
 				<li class="itens">Localização</li>
-				<li class="itens">Profissionais Qualificados</li>
+				<li class="itens">Sabor unico</li>
 			</ul>
 
 			<img src="beneficios.jpg" class="imagembeneficios">
