--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 				<li class="itens">Sabor unico</li>
 			</ul>
 
-			<img src="beneficios.jpg" class="imagembeneficios">
+			<img src="beneficios.JPG" class="imagembeneficios">
 		</div>
 	</body>
 </html>
